<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="5dp"
  android:background="@color/blue"
  android:gravity="center_horizontal"
  android:orientation="vertical">


<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/blue"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />
    
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />

   <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <TextView
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:hint="@string/edit_name"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>
    
     <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/cat"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <TextView
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:hint="@string/edit_category"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>
   
   <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/location"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <TextView
            android:id="@+id/editText3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:hint="@string/edit_location"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow> 
        
   
    
 <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/volunteerCount"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <TextView
            android:id="@+id/editText4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:hint="@string/edit_volunteerCount"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>  
    
 <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/volunteerCountAvailable"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <TextView
            android:id="@+id/editText5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:hint="@string/projectAvailable"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>  

  
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >
   
      <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:textColor="@color/white"
            android:text="@string/timing"
            android:textSize="20sp"
            android:textStyle="italic|bold" />
      
      <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:textColor="@color/white"
            android:text="@string/projectDay"
            android:textSize="20sp"
            android:textStyle="italic|bold" />
      
      
      <TextView
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/white"
            android:hint="@string/projectstartTime"
            android:textSize="15sp"
            android:textStyle="italic|bold" />
      <TextView
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/projectendTime"
            android:layout_marginLeft="2dp"
            android:textSize="15sp"
            android:textStyle="italic|bold" />    
     </TableRow>
        
            
     
    
      
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
      <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_getVolunteers" />
    
    
    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_contactVolunteers" />
      
    </TableRow>
      
        
     
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
       <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_edit" />
         <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_delete" />
    </TableRow>
    
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
     <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_reminders" />
     
     <Button
        android:id="@+id/button6"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_checkindetails" />
   </TableRow>
    
</LinearLayout>
</ScrollView>

 