<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:layout_margin="5dp"
    android:gravity="left"
    android:orientation="vertical" 
    android:id="@+id/profilefragment">
    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />
    
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />

   <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/white"
            android:hint="@string/edit_name"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>
    
     <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/cat"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/white"
            android:hint="@string/edit_category"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>
   
   <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/location"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <EditText
            android:id="@+id/editText3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/white"
            android:hint="@string/edit_location"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>  
    
    <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

    
    
     <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/volunteerCount"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

  
    
    <EditText
            android:id="@+id/editText4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/white"
            android:hint="@string/edit_volunteerCount"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </TableRow>  
     
     
 <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
   
      <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/timing"
            android:textSize="20sp"
            android:textStyle="italic|bold" />   
      
      
      <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/white"
            android:hint="@string/edit_startTime"
            android:textSize="15sp"
            android:textStyle="italic|bold" />
      <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/edit_endTime"
            android:textSize="15sp"
            android:textStyle="italic|bold" />    
     </TableRow>
     
 
      <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" >
  <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:layout_marginLeft="12dp"
        android:layout_gravity="left"
        android:text="@string/button_day" />
  
 <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:layout_marginLeft="70dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addDays" />
 
 </TableRow>
    
      <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_submit" />
          
</LinearLayout>
