<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    
     <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/blank" />
         
        <TextView android:layout_gravity="left"
         android:textColor="@color/green"  
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_marginTop="30dp"
        android:text="@string/childheading" 
        android:id="@+id/TextView04"
         android:textStyle="italic|bold" 
         android:textSize="30sp" />
    <TextView android:layout_gravity="left"
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:text="@string/childlabour" 
         android:id="@+id/TextView05" 
         android:textStyle="italic|bold" 
         android:textSize="20sp" 
         android:textColor="@color/white" 
         android:layout_marginTop="0dp"/>
    <TextView android:layout_gravity="left"
         android:textColor="@color/green"  
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="@string/womenedu" 
        android:id="@+id/TextView08"
         android:textStyle="italic|bold" 
         android:textSize="30sp" 
         android:layout_marginTop="10dp"/>
    <TextView android:layout_gravity="left"
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:text="@string/womenedudesc" 
         android:id="@+id/TextView10" 
         android:textStyle="italic|bold" 
         android:textSize="20sp" 
         android:textColor="@color/white" 
         android:layout_marginTop="0dp"/>
  

    
</LinearLayout>