<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:layout_margin="5dp"
    android:gravity="left"
    android:orientation="vertical" 
    android:id="@+id/profilefragment">
    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />
    
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/green"
        android:text="@string/blank" />

    <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >
    <com.facebook.widget.ProfilePictureView
        android:id="@+id/selection_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        facebook:preset_size="small" >
    </com.facebook.widget.ProfilePictureView>

    <TextView
            android:id="@+id/selection_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic|bold" />
    </TableRow>

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="4.0" />
    
     <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >
    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domain"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold" />
    
     <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:text="@string/domainname"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold" />
    
    </TableRow>
    
     <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" 
            android:gravity="center_horizontal">
    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold" />
    
     <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:text="@string/locname"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold" />
    
    </TableRow>
    
     <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" 
            android:gravity="center_horizontal">
    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold" />
    
     <TextView
        android:id="@+id/TextView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:text="@string/num"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold" />
    
    </TableRow>
    
</LinearLayout>